force-app/main/default/objects/Faturamento__c/Faturamento__c.object-meta.xml
<CustomObject>
    <label>Faturamento</label>
    <nameField>
        <displayFormat>FAT-{000000}</displayFormat>
        <label>Faturamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faturamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>