force-app/main/default/objects/Faturamento__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Faturamentos</relationshipLabel>
    <relationshipName>Faturamentos</relationshipName>
    <type>Lookup</type>
</CustomField>