force-app/main/default/objects/Faturamento__c/fields/DataEmissaoNota__c.field-meta.xml
<CustomField>
    <fullName>DataEmissaoNota__c</fullName>
    <label>Data Emissão da Nota</label>
    <type>Date</type>
</CustomField>