force-app/main/default/objects/Faturamento__c/fields/NrNotaFiscalEmitida__c.field-meta.xml
<CustomField>
    <fullName>NrNotaFiscalEmitida__c</fullName>
    <label>Nr Nota Fiscal Emitida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>