force-app/main/default/objects/Faturamento__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Fechado</fullName>
            </value>
            <value>
                <fullName>Emitido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>