force-app/main/default/objects/Faturamento__c/validationRules/ImpedeAlteracaoContaFaturamento.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeAlteracaoContaFaturamento</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Conta__c)</errorConditionFormula>
    <errorDisplayField>Conta__c</errorDisplayField>
    <errorMessage>Conta de faturamento não pode ser alterada!</errorMessage>
</ValidationRule>